--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "module": "CommonJS",
     "declaration": true,
     "noImplicitAny": true,
@@ -10,7 +11,8 @@
     "jsx": "react",
     "esModuleInterop": true,
     "lib": ["ES2015", "DOM"],
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "strictNullChecks": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
